# abeon-code

./: .gitignore  CLAUDE.md  ONBOARDING.md  README.md  Taskfile.yml  bitbucket-pipelines.yml  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
CloudService/: Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml
CloudService/k8s/: deployment.yaml  ingress.yaml  service.yaml
CloudService/migrations/: 0001_init.sql  0002_add_expo_push_token.sql
CloudService/src/: auth.rs  centrifugo.rs  config.rs  crypto.rs  error.rs  expo.rs  lib.rs  main.rs
CloudService/src/routes/: command.rs  devices.rs  health.rs  mod.rs  notify.rs  pairing.rs  push_token.rs  token.rs
CloudService/src/store/: mod.rs  mysql.rs
CloudService/tests/: api.rs
DesktopApp/: CLAUDE.md  README.md  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
DesktopApp/scripts/: sync-version.mjs  sync-version.test.mjs
DesktopApp/src/: App.tsx
DesktopApp/src-tauri/: Cargo.toml  tauri.conf.json
DesktopApp/src-tauri/capabilities/: default.json
DesktopApp/src-tauri/icons/: icon.icns
DesktopApp/src-tauri/src/: error.rs  lib.rs  state.rs  validation.rs
DesktopApp/src-tauri/src/cli/: installer.rs  mod.rs  open_input.rs
DesktopApp/src-tauri/src/clickup/: mod.rs
DesktopApp/src-tauri/src/commands/: actions.rs  activity.rs  cli.rs  clickup.rs  git.rs  mod.rs  models.rs  notifications.rs  projects.rs  providers.rs  pty.rs  remote.rs  sessions.rs  settings.rs
DesktopApp/src-tauri/src/db/: actions_repo.rs  clickup_config_repo.rs  clickup_links_repo.rs  mod.rs  projects_repo.rs
DesktopApp/src-tauri/src/db/migrations/: 002_session_titles.sql  003_action_pre_command.sql  004_clickup.sql
DesktopApp/src-tauri/src/detectors/: ddev.rs  make.rs  npm.rs
DesktopApp/src-tauri/src/domain/: clickup.rs  mod.rs  project.rs  provider.rs  roster.rs  session.rs  session_event.rs  shell.rs  usage.rs
DesktopApp/src-tauri/src/notifications/: desktop.rs  hook_installer.rs  marker.rs  mod.rs
DesktopApp/src-tauri/src/pty/: handle.rs  mod.rs
DesktopApp/src-tauri/src/remote/: bridge.rs  bus.rs  client.rs  cloud_client.rs  dispatch.rs  identity.rs  mod.rs  protocol.rs  registry.rs  startup.rs  token.rs  wire.rs  ws_client.rs
DesktopApp/src-tauri/src/sessions/: activity.rs  encoding.rs  mod.rs  parser.rs  pricing.rs  reader.rs  usage.rs  watcher.rs
DesktopApp/src-tauri/src/sessions/codex/: activity.rs  mod.rs  parser.rs  reader.rs
DesktopApp/src-tauri/tests/fixtures/: codex-rollout-real.jsonl  codex-rollout.jsonl  sample.jsonl
MobileApp/: CLAUDE.md  README.md  app.json  global.d.ts  jest.config.js  package-lock.json  package.json  tsconfig.json
MobileApp/__tests__/: api.test.ts  authSlice.test.ts  centrifugo-history.test.ts  centrifugo.test.ts  commands.test.ts  connectionSlice.test.ts  dispatch.test.ts  nav.test.ts  pairing.test.ts  roster.test.ts  secure.test.ts  sessionsSlice.test.ts  theme.test.ts
MobileApp/app/: _layout.tsx  index.tsx  pair.tsx
MobileApp/design/: index.html  v1-faithful.html  v3-bold.html  (+1 more)
crates/abeon-remote-core/: .gitignore  Cargo.toml
crates/abeon-remote-core/src/: channels.rs  lib.rs  protocol.rs  token.rs  validation.rs
docs/: abeon-code-cli.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
(+397 files in other folders)
