[package]
name = "abeon-remote-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "abeon_remote_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
anyhow = "1"
ts-rs = { version = "11", features = ["serde-compat"] }
jsonwebtoken = "9"

[dev-dependencies]
serde_json = "1"
